@@ -1,3 +1,9 @@
+2006-12-16  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/active-dialog.c, src/app.c, src/ctree.c,
+	  src/ghtml-deprecated.c, src/idle-dialog.c: include qof.h instead
+	  of qof/gnc-date.h.
+
 2006-11-28  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* gnotime.desktop.in: Removed X-GNOME-Bugzilla* fields.
